report check as cancelled when its cancelled
Not sure how this will interact with required checks yet, but can't hurt
to try

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -177,7 +177,7 @@ jobs:
   passed:
     name: All check passed
     needs: [bootstrap, test, tooling, doc, orc]
-    if: always()
+    if: always() && !cancelled()
     runs-on: ubuntu-latest
 
     steps:
