fix paths, maybe

--- a/testament/testament.nim.cfg
+++ b/testament/testament.nim.cfg
@@ -1,6 +1,7 @@
 # don't move this file without updating the logic in `isNimRepoTests`
 
-path = "$nim;." # For compiler/nodejs
+path = "$nim" # For compiler/nodejs
+path = "."    # to allow for package qualified imports
 -d:ssl # For azure
 # my SSL doesn't have this feature and I don't care:
 -d:nimDisableCertificateValidation
