--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,23 +84,8 @@ jobs:
         uses: ./.github/actions/upload-compiler
 
   test:
+    name: Test the compiler and stdlib
     needs: [bootstrap]
-
-    strategy:
-      fail-fast: false
-
-      matrix:
-        # This controls the testament "batch" feature.
-        #
-        # If any additional batches are added, increment `total_batch` as well.
-        #
-        # This feature allow us to parallelize testing.
-        batch: [0, 1]
-        # This tells testament how many batches are used. Have to be placed in
-        # an array due to how Github Actions process matrices.
-        total_batch: [2]
-
-    name: 'Test the compiler and stdlib (batch #${{ matrix.batch }})'
 
     runs-on: ubuntu-20.04
 
@@ -133,7 +118,7 @@ jobs:
           sudo apt-get install "${deps[@]}"
 
       - name: Run tester
-        run: ./koch test all --batch:'${{ matrix.batch }}_${{ matrix.total_batch }}'
+        run: ./koch test all
 
       - name: Print all test errors
         if: failure()
