--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,7 +133,7 @@ jobs:
           sudo apt-get install "${deps[@]}"
 
       - name: Run tester
-        run: ./koch test all --batch:'${{ matrix.batch }}_${{ matrix.total_batch }}'
+        run: ./koch test --batch:'${{ matrix.batch }}_${{ matrix.total_batch }}' all
 
       - name: Print all test errors
         if: failure()
