--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
           skip_after_successful_duplicate: false
           # Skip newer runs with the same content
           concurrent_skipping: same_content_newer
+          # Do not skip on push, dispatched or cron
+          do_not_skip: ["push", "workflow_dispatch", "schedule"]
 
   bootstrap:
     name: Bootstrap the compiler
