don't run CI on bors temporary branches
As per documentation: https://bors.tech/documentation/getting-started/

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,10 @@ name: Build and test
 on:
   push:
     # Empty configuration means use default (ie. test all branches)
+    branches-ignore:
+      - staging.tmp
+      - trying.tmp
+      - staging-squash-merge.tmp
 
   pull_request:
     # Only take PRs to devel
