don't run merge requirement CI on draft PRs
You can't merge them anyway.

--- a/.github/workflows/pr-req.yml
+++ b/.github/workflows/pr-req.yml
@@ -12,6 +12,9 @@ defaults:
 
 jobs:
   handle_pr:
+    # Don't run when its a draft PR
+    if: '!github.event.pull_request.draft'
+
     name: PR has only one commit
 
     runs-on: ubuntu-latest
