Squashed commit of the following:
commit 2c58c4ca1f4d611f7aeb24d89f23f254ba7f910a
Author: haxscramper <haxscramper@gmail.com>
Date:   Fri Nov 26 19:19:22 2021 +0300

    [FIX] Final test cleanup

commit bee67ff6e86bf8c6cb6d4c2a5a287c519eb30a91
Merge: 350b2e263 14c784d69
Author: haxscramper <haxscramper@gmail.com>
Date:   Fri Nov 26 19:01:10 2021 +0300

    Merge branch 'devel' into language-spec-3

commit 350b2e26333e6d847a98463222b1d706f71408f1
Author: haxscramper <haxscramper@gmail.com>
Date:   Fri Nov 26 19:00:18 2021 +0300

    [DOC] Overload resolution expected errors

commit 69364468df473e2b24fa304342ef87fe8c711422
Author: haxscramper <haxscramper@gmail.com>
Date:   Fri Nov 26 16:48:57 2021 +0300

    [TEST] Vararags passing bugs

commit bf5959a1ef47c6e1086b13b94d77176ca6f10f25
Merge: 507c910de e471f23fa
Author: haxscramper <haxscramper@gmail.com>
Date:   Sun Nov 21 22:35:56 2021 +0300

    Merge branch 'devel' into language-spec-3

commit 507c910de459253209f646a02b9d13754c33fdfd
Author: haxscramper <haxscramper@gmail.com>
Date:   Sun Nov 21 22:28:11 2021 +0300

    [WIP] Varargs subtypes calls

commit 07fe11771b58fef6f4ce71ca88b7d62404874165
Author: haxscramper <haxscramper@gmail.com>
Date:   Sun Nov 21 20:43:53 2021 +0300

    [WIP] Another bug of bugs

commit 0285a853532407560553010624dadf710235fcbb
Author: haxscramper <haxscramper@gmail.com>
Date:   Sun Nov 21 17:02:50 2021 +0300

    [WIP] Generic constraints & subtypes

commit a0cbfbd37f44cd9dd7afee9d26aa73f20d07c453
Author: haxscramper <haxscramper@gmail.com>
Date:   Fri Nov 19 23:19:55 2021 +0300

    [TEST] Overloading resolution

commit c04983a9a73829c613d608b7f4e6a7821618bb1a
Author: haxscramper <haxscramper@gmail.com>
Date:   Fri Nov 19 20:40:25 2021 +0300

    [TEST] Typeclass overload known issues

commit 4c60db7b8a3fd06350b5fe9a050cc3ebb6a879fb
Author: haxscramper <haxscramper@gmail.com>
Date:   Fri Nov 19 19:03:31 2021 +0300

    [TEST] View type borrow expressions

commit cbcff7c90fa6aa8dccf39

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,7 @@ htmldocs
 nimdoc.out.css
 # except here:
 !/nimdoc/testproject/expected/*
+
+# For anyone who wants to make a workspace out of nimskull repo
+*.code-workspace
+.vscode
