--- a/bors.toml
+++ b/bors.toml
@@ -7,3 +7,7 @@ status = [
 pr_status = [
   "PR has only one commit"
 ]
+
+# When turning PR into commit message, consider the body ends at the first
+# thematic break.
+cut_body_after = "---"
