Squashed commit of the following:
commit 4d54374246cb74ad74d32d9986c31257d10c4583
Author: Leorize <leorize+oss@disroot.org>
Date:   Sun Dec 5 15:53:18 2021 -0600

    update documentation to use koch.py

    The "reproducible build" section has been removed, as the compiler build
    is now reproducible by default.

commit c0328dfc38008055ff05f7743a3cc0724c47beda
Author: Leorize <leorize+oss@disroot.org>
Date:   Thu Dec 2 13:41:02 2021 -0600

    avoid adding the binary folder to PATH in CI

    This tests the independence of development tools from `nim` in `PATH`.

    Certain parts of the process are not PATH-independent yet, but they will
    be dealt with in future works.

commit 8e49b853669e6982371f51489f7d9b212eda5992
Author: Leorize <leorize+oss@disroot.org>
Date:   Thu Dec 2 12:54:03 2021 -0600

    koch.nim: don't assume that nim is in PATH

    It is not nice to force developers to adjust their development
    environment if they want to develop the compiler.

commit 705496ebb0e8e947166ab2506ee6da005b85369c
Author: Leorize <leorize+oss@disroot.org>
Date:   Wed Dec 1 21:41:07 2021 -0600

    consolidate koch.nim sources to tools/koch

    Keeping everything under a single namespace allows for better
    organization of koch.nim sources. This would also allow extra
    documentation in the form of `readme` in `koch.nim`.

    Also keeps koch-the-binary out of the repository root, reducing issues
    with calling `koch` directly and risk an older version.

commit 213884b41a475801f8a93bf9fb7402d44c94c724
Author: Leorize <leorize+oss@disroot.org>
Date:   Wed Dec 1 04:01:35 2021 -0600

    remove build time from koch help output

    With `koch.py` keeping the binary up-to-date, this serves no purpose but
    to invalidate the cache on every compiler run.

commit 200bcb0b7ad9754f67b4213e9dfd36280ee4a894
Author: Leorize <leorize+oss@disroot.org>
Date:   Mon Nov 29 18:22:26 2021 -0600

    use a separate cache for first bootstrap iteration

    The bootstrapping c

--- a/.github/actions/download-compiler/action.yml
+++ b/.github/actions/download-compiler/action.yml
@@ -14,10 +14,7 @@ runs:
         name: compiler ${{ runner.os }}
         path: '${{ runner.temp }}'
 
-    - name: Extract and add binaries to PATH
-      run: |
-        tar xf '${{ runner.temp }}/compiler.tar'
-
-        python -c 'import os; print(os.path.abspath("bin"))' > "$GITHUB_PATH"
+    - name: Unpack the workspace
+      run: tar xf '${{ runner.temp }}/compiler.tar'
       shell: bash
       working-directory: '${{ inputs.workspace }}'
